# chat

./: .dockerignore  Dockerfile  fly.toml  rust.code-workspace
client/: index.html  package.json  vite.config.ts
client/src/: App.tsx
server/: .gitignore  Cargo.toml
server/src/: main.rs
